--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:5000/api/v1
+# VITE_API_BASE_URL=http://localhost:5000/api/v1
 
-# VITE_API_BASE_URL=https://ride-booking-nine.vercel.app/api/v1
+VITE_API_BASE_URL=https://ride-booking-nine.vercel.app/api/v1
 
